--- a/dbgui3/dbgui3.csproj
+++ b/dbgui3/dbgui3.csproj
@@ -69,6 +69,12 @@
     <Compile Include="jobcontrol.Designer.cs">
       <DependentUpon>jobcontrol.cs</DependentUpon>
     </Compile>
+    <Compile Include="jobform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="jobform.Designer.cs">
+      <DependentUpon>jobform.cs</DependentUpon>
+    </Compile>
     <Compile Include="ordercontrol.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="jobcontrol.resx">
       <DependentUpon>jobcontrol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="jobform.resx">
+      <DependentUpon>jobform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ordercontrol.resx">
       <DependentUpon>ordercontrol.cs</DependentUpon>
