Cleaned platform and added order wizard

--- a/dbgui3/dbgui3.csproj
+++ b/dbgui3/dbgui3.csproj
@@ -75,7 +75,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="analysiscontrol.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="analysiscontrol.Designer.cs">
       <DependentUpon>analysiscontrol.cs</DependentUpon>
@@ -103,6 +103,12 @@
     </Compile>
     <Compile Include="ordercontrol.Designer.cs">
       <DependentUpon>ordercontrol.cs</DependentUpon>
+    </Compile>
+    <Compile Include="orderwizard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="orderwizard.Designer.cs">
+      <DependentUpon>orderwizard.cs</DependentUpon>
     </Compile>
     <Compile Include="partform.cs">
       <SubType>Form</SubType>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ordercontrol.resx">
       <DependentUpon>ordercontrol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="orderwizard.resx">
+      <DependentUpon>orderwizard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="partform.resx">
       <DependentUpon>partform.cs</DependentUpon>
